#130 fixes debate section on mobile

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -853,6 +853,7 @@ section.debate figure {
 @media (min-width: 768px) {
   section.debate {
     border: none;
+    clear: both;
   }
 }
 section.special-stories > ul > li {
