--- a/assets/less/_includes/home/debate.less
+++ b/assets/less/_includes/home/debate.less
@@ -7,7 +7,8 @@ section.debate {
     max-width: 100%;
   }
 
- @media(min-width: @screen-sm) { 
-  border: none;
- }
+  @media(min-width: @screen-sm) { 
+    border: none;
+    clear: both;
+  }
 }
